--- a/R/stock_summary.Rmd
+++ b/R/stock_summary.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "Stock plotter"
-author: "Student fun"
+author: "Mingang Kim"
 output:
   pdf_document: default
   html_document:
     df_print: paged
 params:
-  symbols: AAPL
-  show_code: yes
+  symbols: ["AAPL","TSLA","SPY","PG","TWTR"]
 ---
 
 ```{r setup, include=FALSE}
@@ -22,6 +21,7 @@ knitr::opts_chunk$set(
 library(tidyquant)
 library(dplyr)
 library(knitr)
+library(ggplot2)
 ```
 
 This report contains market data for `r params$symbols`.  To make for something to plot, I suggest you pull 7 days worth of data.
@@ -30,21 +30,27 @@ This report contains market data for `r params$symbols`.  To make for something 
 # Get data
 stock_data_tbl <- tq_get(
         x    = params$symbols,
-        from = today()-7, 
+        from = today()-11, 
         to   = today()
     ) %>%
     select(symbol, date, adjusted)
-
 kable(stock_data_tbl,caption="Last 7 days of market close")
 ```
 
 ```{r}
 # Create plot with gain/loss
 ## you to do
+#plot(x=stock_data_tbl$date,y=stock_data_tbl$adjusted,
+#     xlab = "Date", ylab = "Adjusted price")
+ggplot(data=stock_data_tbl,aes(x=date,y=adjusted,color=symbol))+
+  geom_line()+xlab('Date')+ylab('Adjusted price')+theme_bw()+
+  scale_colour_manual(values=c("red","green","blue","pink","yellow"))
+  
 ```
 
 ```{r}
 # save data 
 # do you want to have a single running RDS file, or a file for every time this runs
 # up to you to decide
+saveRDS(stock_data_tbl, "../data/StockPrice.RDS")
 ```
